--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "^2.1.2",
     "marked": "^0.3.2",
     "moment": "^2.8.3",
+    "opn": "^5.3.0",
     "serve-index": "^1.5.0",
     "serve-markdown": "^1.1.0",
     "serve-static": "^1.7.0"
